added needed path from root app

--- a/apps.yaml
+++ b/apps.yaml
@@ -8,6 +8,7 @@ spec:
   source: 
     repoURL: https://github.com/nightmar39/argo-15-min.git
     targetRevision: HEAD
+    path: ./
   destination: 
     namespace: dev
     server: https://kubernetes.default.svc
